outputs/tsp_constructive-constructive/mcts-ahd/2025-09-23_14-11-57/evaluations/problem_eval-8913776201971188558_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance metric combining degree centrality and distance centrality, uses a reinforcement learning-inspired exploration bonus with a decaying temperature parameter, and implements a memory-based revisit penalty with exponential growth to balance exploration and exploitation while preventing cycles.}
                                                                                                                                                                                                                                                                                                                 ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance metric combining degree centrality and distance centrality, uses a reinforcement learning-inspired exploration bonus with a decaying temperature parameter, and implements a memory-based revisit penalty with exponential growth to balance exploration and exploitation while preventing cycles.}
                                                                                                                                                                                                                                                                                                                 ^
SyntaxError: unmatched '}'
